<resources>
    <string name="app_name">Calculatrice</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn0">0</string>
    <string name="btn9">9</string>
    <string name="btnEgal">=</string>
    <string name="btnPoint">.</string>
    <string name="btnSupprimer">Supprimer</string>
    <string name="btnBackspace"><![CDATA[<-]]></string>
    <string name="btnPlus">+</string>
    <string name="btnNegatif">-</string>
    <string name="btnMulti">*</string>
    <string name="btnDivision">/</string>
    <string name="calculerhint">Calculer</string>
    <string name="Historique">Historique</string>
</resources>